[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = 'wconv'
version = '2.0.0'
dependencies = [
  'colorama',
]
requires-python = '>=3.9'
authors = [
  {name = 'Tobias Neitzel (@qtc_de)'},
]
maintainers = [
  {name = 'Tobias Neitzel (@qtc_de)'}
]
description = 'Windows Format Converter'
readme = 'README.md'
license = {file = 'LICENSE'}
keywords = [
    'windows',
    'uac',
    'ace',
    'acl',
    'sid',
    'sddl',
    'securitydescriptor',
    'ntsecuritydescriptor'
]
classifiers = [
  'Programming Language :: Python :: 3',
    'Operating System :: Unix',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
]

[project.urls]
Homepage = 'https://github.com/qtc-de/wconv'
Documentation = 'https://github.com/qtc-de/wconv/tree/main/README.md'
Repository = 'https://github.com/qtc-de/wconv'
'Bug Tracker' = 'https://github.com/qtc-de/wconv/issues'
Changelog = 'https://github.com/qtc-de/wconv/blob/main/CHANGELOG.md'

[project.scripts]
wconv = 'wconv.main:main'
